--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@fontsource/reddit-sans-condensed": "^5.2.6",
     "@hookform/resolvers": "^5.2.1",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@microsoft/signalr": "^9.0.6",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@react-spring/web": "^10.0.2",
     "@stitches/react": "^1.2.8",
@@ -29,7 +31,9 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.3",
+    "react-player": "^3.3.3",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.8"
